add instructions to run .jar file