@@ -1,2 +1,8 @@
 # TicTacToe-Minimax
-A Tic Tac Toe AI with Minimax Algorithm
+A basic Tic-tac-toe AI using Minimax Algorithm.
+
+## How To Run:
+If you want to play the game, there's an executable .jar file in the root directory. It can be run from the command line or from an IDE.
+To execute the .jar file, enter the following:
+
+```java --module-path ${PATH_TO_FX} --add-modules=javafx.controls,javafx.fxml,javafx.media -jar TicTacToe.jar ```
